force-app/main/default/objects/CJFW_DepartmentAllocation__c/CJFW_DepartmentAllocation__c.object-meta.xml
<CustomObject>
    <description>[P2] 부서별 배부</description>
    <label>부서별 배부</label>
    <nameField>
        <displayFormat>DA{YY}{MM}{DD}{000000}</displayFormat>
        <label>Auto No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>