force-app/main/default/objects/CJFW_DepartmentAllocation__c/fields/CollateralEnrollment__c.field-meta.xml
<CustomField>
    <fullName>CollateralEnrollment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>담보 입보</label>
    <referenceTo>CJFW_CollateralEnrollment__c</referenceTo>
    <relationshipLabel>부서별 배부</relationshipLabel>
    <relationshipName>Collateral_Enrollment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>