force-app/main/default/objects/CJFW_DepartmentAllocation__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>고객명</description>
    <label>고객</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>부서별 배부</relationshipLabel>
    <relationshipName>Department_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>