force-app/main/default/objects/CJFW_DepartmentAllocation__c/fields/DeptCode__c.field-meta.xml
<CustomField>
    <fullName>DeptCode__c</fullName>
    <description>부서코드</description>
    <label>부서코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>