force-app/main/default/objects/CJFW_DepartmentAllocation__c/fields/DeptName__c.field-meta.xml
<CustomField>
    <fullName>DeptName__c</fullName>
    <description>부서명</description>
    <label>부서명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>