force-app/main/default/objects/CJFW_DepartmentAllocation__c/fields/ExpirationStatus__c.field-meta.xml
<CustomField>
    <fullName>ExpirationStatus__c</fullName>
    <description>담보 만기여부 체크</description>
    <label>만기여부</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>