force-app/main/default/objects/CJFW_DepartmentAllocation__c/fields/FM_CustomerId__c.field-meta.xml
<CustomField>
    <fullName>FM_CustomerId__c</fullName>
    <description>고객코드</description>
    <formula>Customer__r.CustomerID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>고객코드</label>
    <type>Text</type>
</CustomField>