force-app/main/default/objects/CJFW_DepartmentAllocation__c/fields/FM_TotalCollateralAmount__c.field-meta.xml
<CustomField>
    <fullName>FM_TotalCollateralAmount__c</fullName>
    <formula>CollateralEnrollment__r.TotalCollateralAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>총 담보금액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>