force-app/main/default/objects/CJFW_DepartmentAllocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>FM_CustomerId__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>